--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     margin-bottom: 10px;
 }
 .main {
-    display: flex;
     align-items: center;
     justify-content: center;
     margin: 30px;
@@ -19,3 +18,11 @@ body {
     box-shadow: -5px -5px 10px 0px rgba(255, 255, 255, 0.5), 5px 5px 10px 0px rgba(0, 0, 0, 0.3);
 }
 
+.main h2 {
+    font-size: 3vw;
+}
+
+.main a {
+    color: #3f3f3f;
+    text-decoration: none;
+}
