--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -10,6 +11,7 @@
     align-items: center;
     height: 100vh;
     background-color:#e0e0e0;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1 {
