--- a/style.css
+++ b/style.css
@@ -38,10 +38,12 @@ h1 {
     font-size: 3em;
     font-weight: bold;
     color: #333;
+    font-family: 'Poppins', sans-serif;
 }
 
 #day {
     font-size: 1.2em;
+    font-family: 'Poppins', sans-serif;
 }
 
 .copy {
@@ -56,6 +58,7 @@ h1 {
 .copy a {
     color: #fff;
     text-decoration: none;
+    font-family: 'Poppins', sans-serif;
 }
 
   
