--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
     align-items: center;
     height: 100vh;
     background-color:#e0e0e0;
-    font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -38,12 +37,12 @@ h1 {
     font-size: 3em;
     font-weight: bold;
     color: #333;
-    font-family: 'Poppins', sans-serif;
+    font-family:monospace;
 }
 
 #day {
     font-size: 1.2em;
-    font-family: 'Poppins', sans-serif;
+    font-family:monospace;
 }
 
 .copy {
@@ -58,7 +57,7 @@ h1 {
 .copy a {
     color: #fff;
     text-decoration: none;
-    font-family: 'Poppins', sans-serif;
+    font-family:monospace;
 }
 
   
